test/should_fail/enum_006.grg
actions enum_006 using attrib_model_001, enum_model_003;

rule r {
	pattern {
		x:NINT - l:B -> k:A;
	}
	modify{
		eval { x.a = (l.e == k.e) ? 0 : 1; }
	}
}
